crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@src__generated__shader_atlas__gpu_picking.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/gpu_picking.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang shader: gpu_picking.shader.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use ash::vk;
use serde::Serialize;

pub use super::gpu_picking_common::Cube;
pub use super::ray_march_camera::RayMarchCamera;
#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
use crate::renderer::render_graph::GPUWrite;
#[allow(unused)]
use crate::renderer::vertex_description::{NoVertex, VertexDescription};
use crate::renderer::*;
use crate::shaders::atlas::{PrecompiledShader, PrecompiledShaders, ShaderAtlasEntry};
use crate::shaders::json::{ReflectedPipelineLayout, ReflectionJson};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct GpuPickingParams {
    pub camera: RayMarchCamera,
    pub picked_object_id: u32,
    pub cube_count: u32,
    pub cubes: ReadAddr<Cube>,
}

impl GPUWrite for GpuPickingParams {}
const _: () = assert!(std::mem::size_of::<GpuPickingParams>() == 96);
const _: () = assert!(std::mem::offset_of!(GpuPickingParams, camera) == 0);
const _: () = assert!(std::mem::size_of::<RayMarchCamera>() == 80);
const _: () = assert!(std::mem::offset_of!(GpuPickingParams, picked_object_id) == 80);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(GpuPickingParams, cube_count) == 84);
const _: () = assert!(std::mem::size_of::<u32>() == 4);
const _: () = assert!(std::mem::offset_of!(GpuPickingParams, cubes) == 88);
const _: () = assert!(std::mem::size_of::<ReadAddr<Cube>>() == 8);

pub struct Resources<'a> {
    pub params_buffer: &'a UniformBufferHandle<GpuPickingParams>,
}

#[derive(Debug, Clone, Copy)]
pub struct GpuPickingParamsData {
    pub camera: RayMarchCamera,
    pub picked_object_id: u32,
    pub cube_count: u32,
}

#[derive(Debug, Clone, Copy)]
pub struct GpuPickingParamsBindings {
    pub cubes: ReadBufferBinding<Cube>,
}

impl GraphParamBindingSet for GpuPickingParamsBindings {
    type Pending = PendingParamBindings<Self>;

    fn pending() -> Self::Pending {
        Self::Pending::new()
    }
}

impl GraphBindingSet for GpuPickingParamsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.cubes.erased()));
    }
}
/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct GpuPickingParamsInput {
    pub camera: RayMarchCamera,
    pub picked_object_id: u32,
    pub cube_count: u32,
    pub cubes: ReadBufferBinding<Cube>,
}

impl GraphShaderParams for GpuPickingParams {
    type Data = GpuPickingParamsData;
    type Bindings = GpuPickingParamsBindings;
    type Input = GpuPickingParamsInput;

    fn input(data: &Self::Data, bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            camera: data.camera,
            picked_object_id: data.picked_object_id,
            cube_count: data.cube_count,
            cubes: bindings.cubes,
        }
    }

    fn assemble_input(input: &Self::Input, resolver: &BindingResolver<'_>) -> Self {
        Self {
            camera: input.camera,
            picked_object_id: input.picked_object_id,
            cube_count: input.cube_count,
            cubes: resolver.read_buf(input.cubes),
        }
    }
}

impl GraphBindingSet for GpuPickingParamsInput {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.cubes.erased()));
    }
}

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/gpu_picking.json"
        ));

        let reflection_json: ReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> PipelineConfig<'a, NoVertex, DrawVertexCount, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        PipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build_vertex_count()
    }

    fn vert_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .vertex_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn frag_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .fragment_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn vert_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/gpu_picking.vert.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }

    fn frag_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/gpu_picking.frag.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn vertex_binding_descriptions(&self) -> Vec<vk::VertexInputBindingDescription> {
        vec![]
    }

    fn vertex_attribute_descriptions(&self) -> Vec<vk::VertexInputAttributeDescription> {
        vec![]
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_shaders(&self) -> PrecompiledShaders {
        let vert = PrecompiledShader {
            entry_point_name: self.vert_entry_point_name(),
            spv_bytes: self.vert_spv(),
        };

        let frag = PrecompiledShader {
            entry_point_name: self.frag_entry_point_name(),
            spv_bytes: self.frag_spv(),
        };

        PrecompiledShaders { vert, frag }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn reflection_json(&self) -> &ReflectionJson {
        &self.reflection_json
    }
}
