crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@src__generated__shader_atlas__gpu_picking_common.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/gpu_picking_common.rs
---
// GENERATED FILE (do not edit directly)

//! shared types from slang module: gpu_picking_common.slang

use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::gpu_read::GPURead;
#[allow(unused_imports)]
use crate::renderer::render_graph::GPUWrite;

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Cube {
    pub position: glam::Vec3,
    pub _padding_0: [u8; 4],
    pub radii: glam::Vec3,
    pub _padding_1: [u8; 4],
}

impl GPUWrite for Cube {}
const _: () = assert!(std::mem::size_of::<Cube>() == 32);
const _: () = assert!(std::mem::offset_of!(Cube, position) == 0);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);
const _: () = assert!(std::mem::offset_of!(Cube, radii) == 16);
const _: () = assert!(std::mem::size_of::<glam::Vec3>() == 12);

impl GPURead for Cube {
    const GPU_SIZE: usize = 32;

    fn read_gpu(bytes: &[u8]) -> anyhow::Result<Self> {
        anyhow::ensure!(
            bytes.len() == Self::GPU_SIZE,
            "invalid GPU readback byte length for Cube"
        );

        Ok(Self {
            position: glam::Vec3::from_array(<[f32; 3] as GPURead>::read_gpu(&bytes[0..12])?),
            _padding_0: [0; 4],
            radii: glam::Vec3::from_array(<[f32; 3] as GPURead>::read_gpu(&bytes[16..28])?),
            _padding_1: [0; 4],
        })
    }
}
