crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@src__generated__shader_atlas__mltrs.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/mltrs.rs
---
// GENERATED FILE (do not edit directly)

//! shared types from slang module: mltrs.slang

use serde::Serialize;

#[allow(unused_imports)]
use crate::renderer::render_graph::GPUWrite;
use crate::renderer::render_graph::*;

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct MVPMatrices {
    pub model: glam::Mat4,
    pub view: glam::Mat4,
    pub proj: glam::Mat4,
}

impl GPUWrite for MVPMatrices {}
const _: () = assert!(std::mem::size_of::<MVPMatrices>() == 192);
const _: () = assert!(std::mem::offset_of!(MVPMatrices, model) == 0);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);
const _: () = assert!(std::mem::offset_of!(MVPMatrices, view) == 64);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);
const _: () = assert!(std::mem::offset_of!(MVPMatrices, proj) == 128);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Projection {
    pub matrix: glam::Mat4,
}

impl GPUWrite for Projection {}
const _: () = assert!(std::mem::size_of::<Projection>() == 64);
const _: () = assert!(std::mem::offset_of!(Projection, matrix) == 0);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);

/// Complete graph inputs before resource references resolve to GPU values.
#[derive(Debug, Clone, Copy)]
pub struct MVPMatricesInput {
    pub model: glam::Mat4,
    pub view: glam::Mat4,
    pub proj: glam::Mat4,
}

impl GraphShaderParams for MVPMatrices {
    type Data = Self;
    type Bindings = ();
    type Input = MVPMatricesInput;

    fn input(data: &Self::Data, _bindings: &Self::Bindings) -> Self::Input {
        Self::Input {
            model: data.model,
            view: data.view,
            proj: data.proj,
        }
    }

    fn assemble_input(input: &Self::Input, _resolver: &BindingResolver<'_>) -> Self {
        Self {
            model: input.model,
            view: input.view,
            proj: input.proj,
        }
    }
}

impl GraphBindingSet for MVPMatricesInput {
    fn visit(&self, _f: &mut dyn FnMut(GraphBinding)) {}
}
