crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@src__generated__shader_atlas__particles_compute.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/particles_compute.rs
---
// GENERATED FILE (do not edit directly)

//! generated from slang compute shader: particles.compute.slang

use std::ffi::CString;
use std::io::Cursor;

use ash::util::read_spv;
use serde::Serialize;

pub use super::particle::Particle;
use crate::renderer::gpu_write::GPUWrite;
use crate::renderer::*;
use crate::shaders::atlas::{ComputeShaderAtlasEntry, PrecompiledShader};
use crate::shaders::json::{ComputeReflectionJson, ReflectedPipelineLayout};

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct SimParams {
    pub particles_in: ReadAddr<Particle>,
    pub particles_out: Addr<Particle>,
    pub delta_time: f32,
    pub _padding_0: [u8; 12],
}

impl GPUWrite for SimParams {}
const _: () = assert!(std::mem::size_of::<SimParams>() == 32);
const _: () = assert!(std::mem::offset_of!(SimParams, particles_in) == 0);
const _: () = assert!(std::mem::size_of::<ReadAddr<Particle>>() == 8);
const _: () = assert!(std::mem::offset_of!(SimParams, particles_out) == 8);
const _: () = assert!(std::mem::size_of::<Addr<Particle>>() == 8);
const _: () = assert!(std::mem::offset_of!(SimParams, delta_time) == 16);
const _: () = assert!(std::mem::size_of::<f32>() == 4);

pub struct Resources<'a> {
    pub sim_params_buffer: &'a UniformBufferHandle<SimParams>,
}

#[derive(Debug, Clone, Copy)]
pub struct SimParamsData {
    pub delta_time: f32,
}

#[derive(Debug, Clone, Copy)]
pub struct SimParamsBindings {
    pub particles_in: ReadBufferBinding<Particle>,
    pub particles_out: BufferBinding<Particle>,
}

impl GraphShaderParams for SimParams {
    type Data = SimParamsData;
    type Bindings = SimParamsBindings;

    fn assemble(
        data: &Self::Data,
        bindings: &Self::Bindings,
        resolver: &BindingResolver<'_>,
    ) -> Self {
        Self {
            particles_in: resolver.read_buf(bindings.particles_in),
            particles_out: resolver.buf(bindings.particles_out),
            delta_time: data.delta_time,
            _padding_0: Default::default(),
        }
    }
}

impl GraphBindingSet for SimParamsBindings {
    fn visit(&self, f: &mut dyn FnMut(GraphBinding)) {
        f(GraphBinding::Buffer(self.particles_in.erased()));
        f(GraphBinding::Buffer(self.particles_out.erased()));
    }
}

pub const WORKGROUP_SIZE: [u32; 3] = [256, 1, 1];

#[derive(Clone)]
pub struct Shader {
    pub reflection_json: ComputeReflectionJson,
}

impl Shader {
    pub fn init() -> Self {
        let json_str = include_str!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/particles.comp.json"
        ));

        let reflection_json: ComputeReflectionJson = serde_json::from_str(json_str).unwrap();

        Self { reflection_json }
    }

    pub fn pipeline_config<'a>(
        &self,
        resources: Resources<'a>,
    ) -> ComputePipelineConfig<'a, NoPush> {
        // NOTE each of these must be in descriptor set layout order in the reflection json

        #[rustfmt::skip]
        let texture_handles = vec![
        ];

        #[rustfmt::skip]
        let uniform_buffer_handles = vec![
            RawUniformBufferHandle::from_typed(resources.sim_params_buffer),
        ];

        #[rustfmt::skip]
        let storage_texture_handles = vec![
        ];

        ComputePipelineConfigBuilder {
            shader: Box::new(self.clone()),
            texture_handles,
            uniform_buffer_handles,
            storage_texture_handles,
        }
        .build()
    }

    fn comp_entry_point_name(&self) -> CString {
        let entry_point = self
            .reflection_json
            .compute_entry_point
            .entry_point_name
            .clone();

        CString::new(entry_point).unwrap()
    }

    fn comp_spv(&self) -> Vec<u32> {
        let bytes = include_bytes!(concat!(
            env!("CARGO_MANIFEST_DIR"),
            "/shaders/compiled/particles.comp.spv"
        ));
        let byte_reader = &mut Cursor::new(bytes);
        read_spv(byte_reader).expect("failed to convert spv byte layout")
    }
}

impl ComputeShaderAtlasEntry for Shader {
    fn source_file_name(&self) -> &str {
        &self.reflection_json.source_file_name
    }

    fn layout_bindings(&self) -> Vec<Vec<LayoutDescription>> {
        self.reflection_json.layout_bindings()
    }

    fn precompiled_compute_shader(&self) -> PrecompiledShader {
        PrecompiledShader {
            entry_point_name: self.comp_entry_point_name(),
            spv_bytes: self.comp_spv(),
        }
    }

    fn pipeline_layout(&self) -> &ReflectedPipelineLayout {
        &self.reflection_json.pipeline_layout
    }

    fn workgroup_size(&self) -> [u32; 3] {
        self.reflection_json.workgroup_size
    }

    fn reflection_json(&self) -> &ComputeReflectionJson {
        &self.reflection_json
    }
}
