crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@src__generated__shader_atlas__projection.rs.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/projection.rs
---
// GENERATED FILE (do not edit directly)

//! shared types from slang module: projection.slang

use serde::Serialize;


#[allow(unused_imports)]
use crate::renderer::gpu_write::GPUWrite;

// glam must be built without its scalar-math feature (GPU layouts need align-16 Vec4)
const _: () = assert!(std::mem::align_of::<glam::Vec4>() == 16);

#[derive(Debug, Clone, Copy, Serialize)]
#[repr(C, align(16))]
pub struct Projection {
    pub matrix: glam::Mat4,
}

impl GPUWrite for Projection {}
const _: () = assert!(std::mem::size_of::<Projection>() == 64);
const _: () = assert!(std::mem::offset_of!(Projection, matrix) == 0);
const _: () = assert!(std::mem::size_of::<glam::Mat4>() == 64);
